Redirecting to actual page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&display=swap" rel="stylesheet">
+    <script>
+        window.location = "https://carlosdanielom.github.io/animemaniatics/src/app/index.html"
+    </script>
 </head>
 <body>
     <!-- contain header -->
